# gitsync

./: Cargo.toml
src/: lib.rs  main.rs  object.rs  repository.rs  test_utils.rs
test_data/simple_test_blob/: test.txt
test_data/simple_test_blob/git-sync-repo/: index
test_data/simple_test_blob/git-sync-repo/logs/: HEAD
test_data/simple_test_blob/git-sync-repo/refs/heads/: master
